<resources>
    <string name="app_name">Dalnoboy</string>
    <string name="client_content_1">
        Ми — логістична компанія нового покоління, яка не визнає меж.\n\n
        DalnoBoy — це не просто доставка, це персональний підхід до кожного вантажу.
        Ми піклуємось, як про власне.
    </string>

    <string name="client_content_2">
        Обираючи нас ви отримуєте:
    </string>

    <string name="client_content_3">
        🚚 Оперативність, яка вражає  Ваш вантаж буде там, де треба, саме тоді, коли треба.\n\n
        🛡️ Надійність, що заслуговує довіри  Ми гарантуємо безпеку перевезення на кожному етапі шляху.
    </string>

    <string name="client_content_4">
        Доставляємо в межах  7 областей України:\n
    </string>

    <string name="client_content_5">
        • Дніпропетровська \n• Житомирська \n• Запорізька\n• Київська \n• Полтавська\n• Харківська\n• Чернігівська
    </string>

    <string name="client_content_6">
        Ми не просто доставляємо — ми створюємо логістичні рішення,які допомагають вашому бізнесу рости.
    </string>

    <string name="client_content_7">
        DalnoBoy — рухаймося вперед разом.
    </string>
</resources>

