<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.MainActivity">

    <include
        android:id="@+id/topBar"
        layout="@layout/client_upper_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="Scrollable Content Image"
                android:scaleType="centerInside"
                android:src="@drawable/content_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_content_1"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="33dp"
                android:layout_marginLeft="22dp"

                android:textSize="22sp"
                android:fontFamily="@font/roboto_medium"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/client_content_2"
                android:textSize="24sp"
                android:layout_marginLeft="28dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"

                android:text="@string/client_content_3"
                android:textSize="20sp"
                android:layout_margin="13dp"
                android:layout_marginBottom="32dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="10dp"
                android:background="@drawable/text_border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"

                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"

                android:text="@string/client_content_4"
                android:textSize="22sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"

                android:layout_marginLeft="20dp"

                android:text="@string/client_content_5"
                android:textSize="20sp"
                android:lineSpacingExtra="4dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="Scrollable Content Image"
                android:scaleType="centerInside"
                android:src="@drawable/map"

                android:layout_marginTop="32dp"
                android:layout_marginBottom="48dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"

                android:layout_marginLeft="36dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"

                android:text="@string/client_content_6"
                android:textSize="20sp"
                android:lineSpacingExtra="4dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"

                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginBottom="40dp"

                android:text="@string/client_content_7"
                android:textSize="26sp"
                android:lineSpacingExtra="4dp"
                />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottomBar"
        layout="@layout/client_low_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
